--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -34,9 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load pickled data\n",
@@ -44,9 +42,9 @@
     "\n",
     "# TODO: Fill this in based on where you saved the training and testing data\n",
     "\n",
-    "training_file = ?\n",
-    "validation_file=?\n",
-    "testing_file = ?\n",
+    "training_file = 'traffic-signs-data/train.p'\n",
+    "validation_file='traffic-signs-data/valid.p'\n",
+    "testing_file = 'traffic-signs-data/test.p'\n",
     "\n",
     "with open(training_file, mode='rb') as f:\n",
     "    train = pickle.load(f)\n",
@@ -484,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
