--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -1305,7 +1305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### New Images predicted with 57%(4/7) Accuracy"
+    "### New Images predicted with 71%( Accuracy"
    ]
   },
   {
